Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Made the font of textarea in wiki page AJAX edition be monospaced. Without
  monospace font using reStructuredText was very difficult.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 