@@ -8,6 +8,7 @@ Bug fixes
 ~~~~~~~~~
 - Made the font of textarea in wiki page AJAX edition be monospaced. Without
   monospace font using reStructuredText was very difficult.
+- Added some missing actionicons.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
